k8s/infrastructure/controllers/cert-manager/CiliumNetworkPolicy.cert-manager.cainjector.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cm-cainjector-ingress
  namespace: cert-manager
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: cainjector}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '9402', protocol: TCP}]]}  # Host probes
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cm-cainjector-egress
  namespace: cert-manager
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: cainjector}}
  egress:
    - {toEntities: [kube-apiserver]}
