k8s/infrastructure/controllers/cert-manager/CiliumNetworkPolicy.cert-manager.controller.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cm-controller-ingress
  namespace: cert-manager
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: cert-manager}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '9402', protocol: TCP}]]}  # Host probes
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cm-controller-egress
  namespace: cert-manager
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: cert-manager}}
  egress:
    - {toEntities: [kube-apiserver]}
    - {toFQDNs: [{matchName: acme-v02.api.letsencrypt.org}], toPorts: [ports: [{port: '443', protocol: TCP}]]}
    - {toFQDNs: [{matchName: api.cloudflare.com}], toPorts: [ports: [{port: '443', protocol: TCP}]]}
    - {toCIDRSet: [{cidr: 8.8.8.8/32}, {cidr: 8.8.4.4/32}], toPorts: [ports: [{port: '53', protocol: UDP}, {port: '53', protocol: TCP}]]}
