k8s/infrastructure/controllers/cert-manager/CiliumNetworkPolicy.cert-manager.startupapicheck.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cm-startupapicheck-egress
  namespace: cert-manager
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: startupapicheck}}
  egress:
    - {toEntities: [kube-apiserver]}
