k8s/infrastructure/controllers/cert-manager/CiliumNetworkPolicy.cert-manager.webhook.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cm-webhook-ingress
  namespace: cert-manager
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: webhook}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '10250', protocol: TCP}]]}  # Host probes
    - {fromEntities: [kube-apiserver], toPorts: [ports: [{port: '10250', protocol: TCP}]]}  # kube-apiserver admission calls
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cm-webhook-egress
  namespace: cert-manager
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: webhook}}
  egress:
    - {toEntities: [kube-apiserver]}
