k8s/infrastructure/controllers/cert-manager/CiliumNetworkPolicy.trust-manager.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-trustmanager-ingress
  namespace: cert-manager
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: trust-manager}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '6060', protocol: TCP}]]}  # Host probes
    - {fromEntities: [kube-apiserver], toPorts: [ports: [{port: '6443', protocol: TCP}]]}  # kube-apiserver admission calls
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-trustmanager-egress
  namespace: cert-manager
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: trust-manager}}
  egress:
    - {toEntities: [kube-apiserver]}
