k8s/infrastructure/controllers/cert-manager/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cm-controller
  namespace: cert-manager
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: cert-manager}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '9402', protocol: TCP}]]}  # Host probes
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring}], toPorts: [ports: [{port: '9402', protocol: TCP}]]}  # Prometheus
  egress:
    - {toEntities: [kube-apiserver]}
    - {toFQDNs: [{matchName: acme-v02.api.letsencrypt.org}], toPorts: [ports: [{port: '443', protocol: TCP}]]}
    - {toFQDNs: [{matchName: api.cloudflare.com}], toPorts: [ports: [{port: '443', protocol: TCP}]]}
    - {toEntities: [world], toPorts: [ports: [{port: '53', protocol: UDP}, {port: '53', protocol: TCP}]]}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cm-cainjector
  namespace: cert-manager
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: cainjector}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '9402', protocol: TCP}]]}  # Host probes
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring}], toPorts: [ports: [{port: '9402', protocol: TCP}]]}  # Prometheus
  egress:
    - {toEntities: [kube-apiserver]}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cm-startupapicheck
  namespace: cert-manager
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: startupapicheck}}
  # ingress: []
  egress:
    - {toEntities: [kube-apiserver]}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cm-webhook
  namespace: cert-manager
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: webhook}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '10250', protocol: TCP}]]}  # Host probes
    - {fromEntities: [kube-apiserver], toPorts: [ports: [{port: '10250', protocol: TCP}]]}  # kube-apiserver admission calls
  egress:
    - {toEntities: [kube-apiserver]}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-trustmanager
  namespace: cert-manager
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: trust-manager}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '6060', protocol: TCP}]]}  # Host probes
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring}], toPorts: [ports: [{port: '9402', protocol: TCP}]]}  # Prometheus
    - {fromEntities: [kube-apiserver], toPorts: [ports: [{port: '6443', protocol: TCP}]]}  # kube-apiserver admission calls
  egress:
    - {toEntities: [kube-apiserver]}
